# deep-learning-sandbox

./: .gitignore  README.md  pyproject.toml
CLIP/src/: data_loader.py  evaluate.py  text_transformer.py  train.py  utils.py  vision_transformer.py
contrastive-language-image-pretraining/: test_captions.txt
contrastive-language-image-pretraining/docs/: API_REFERENCE.md  ARCHITECTURE.md  HUGGINGFACE_METADATA_GUIDE.md  HUGGINGFACE_README.md  INDEX.md  QUICK_START.md  README.md  RESULTS.md  TRAINING_GUIDE.md
contrastive-language-image-pretraining/src/: clip.py  config.py  data_loader.py  main.py  test_dataset.py  train.py  utils.py
densely-connected-convolutional-networks/: README.md
densely-connected-convolutional-networks/docs/: API_REFERENCE.md  ARCHITECTURE.md  INDEX.md  PROJECT_SUMMARY.md  QUICK_START.md  TRAINING.md
densely-connected-convolutional-networks/src/: evaluate.py  main.py  test_config.py  train.py
generative-pretrained-transformer-2/: README.md
generative-pretrained-transformer-2/docs/: API_REFERENCE.md  ARCHITECTURE.md  INFERENCE.md  SETUP.md  TRAINING.md
generative-pretrained-transformer-2/src/: __init__.py  evaluate.py  inference.py  main.py  train.py
legacy-codes/Tiny-Llama-agri-QA-fineTuned/: README.md  training.ipynb
legacy-codes/Tiny_Lllama-sqlQuries-fine_tuned/: README.md  Training.ipynb  app.py
positional-encoding/: README.md  main.py
positional-encoding/config/: __init__.py
positional-encoding/docs/: ALIBI.md  BINARY.md  COMPARISON.md  INDEX.md  ROTARY.md  SINUSOIDAL.md
positional-encoding/encodings/: __init__.py  alibi_positional_encoding.py  binary_positional_encoding.py  index_positional_encoding.py  rotary_positional_encoding.py  sinusoidal_positional_encoding.py
positional-encoding/utils/: __init__.py  (+1 more)
residual-network/: README.md
shifted-window-transformers/: README.md
siamese-network/: workbook.ipynb
transformers/: README.md
vision-transformers/: README.md
(+200 files in other folders)
